update module name

--- a/modules/blox-krrbootstrap/theme.toml
+++ b/modules/blox-krrbootstrap/theme.toml
@@ -1,4 +1,4 @@
-name = "Hugo Blox - Bootstrap"
+name = "Hugo Blox - Bootstrap for Krr"
 license = "MIT"
 licenselink = "https://github.com/HugoBlox/hugo-blox-builder/blob/main/LICENSE.md"
 description = "Create any kind of website with fully customizable widgets - 50+ light/dark color themes, language packs, and widgets included."
